--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVA, AI assistant</title>
+    <title>eva</title>
     <meta name="description" content="AI assistant" />
     <meta name="author" content="EVA" />
   </head>
